# is_it_christmas

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: black.yml  python-publish.yml
src/: __init__.py
