[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["is_it_christmas"]

[project]
name = "is_it_christmas"
version = "0.1.0"
authors = [
  { name="Michael Boerman", email="michaelboerman@hey.com" },
]
description = "A small, tutorial-based example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://michaelboerman.com"
Issues = "https://michaelboerman.com"